# lepton-demo

./: .gitignore  index.html  package.json  pyproject.toml  vite.config.ts
back/: __main__.py
backend/lepton_demo/: __main__.py  controller.py  game.py
frontend/lepton_demo/: main.tsx
