[project]
name = "lepton_demo"
version = "1.0.0"
description = "Demo app for Lepton"
readme = "README.md"
requires-python = ">=3.12"

[tool.pixi.workspace]
channels = ["https://repo.prefix.dev/conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]


[tool.setuptools.packages.find]
where = ["backend"]